--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
                                 Registration &amp; Important Dates
                             </a>
                         </li>
-                        <!-- <li> -->
-                        <!--     <a href="#program" class="scrolly">Program</a> -->
-                        <!-- </li> -->
                         <li>
-                          <a href="#about" class="scrolly">About</a>
+                            <a href="#program" class="scrolly">Program</a>
                         </li>
                         <li>
                           <a href="#logistics" class="scrolly">Logistics</a>
@@ -96,7 +93,7 @@
                 <div class="inner">
                 <h2>Current Program</h2>
                 <h4>
-                Talk assignments are at <a
+                Talk and poster assignments are at <a
                                                 href="https://docs.google.com/spreadsheets/d/1enZiM-_JRdshToyB1YXf3TBiS55jeB7Lr7o2jx22mVg/edit?usp=sharing">
                     this link</a>. Please let us know if you see any
             mistakes!</h4>
@@ -104,10 +101,11 @@
                 <h3>Monday (6/16)</h3>
                 <ul>
                     <li> 8-9 Breakfast </li>
-                    <li> 9-1015 Talk session 1 </li>
-                    <li> 1015-1045 Coffee break </li>
-                    <li> 1045-12 Talk session 2 </li>
-                    <li> 12-130 Mentoring event / lunch (provided) </li>
+                    <li> 9-905 Opening Remarks </li>
+                    <li> 905-1020 Talk session 1 </li>
+                    <li> 1020-1050 Coffee break </li>
+                    <li> 1050-1205 Talk session 2 </li>
+                    <li> 1205-130 Mentoring event / lunch (provided) </li>
                     <li> 130-245 Talk session 3 </li>
                     <li> 245-345 Poster session + coffee </li>
                     <li> 345-500 Talk session 4 </li>
@@ -119,12 +117,107 @@
                     <li> 9-1015 Talk session 5 </li>
                     <li> 1015-1045 Coffee break </li>
                     <li> 1045-12 Talk session 6 </li>
-                    <li> 12-130 Lunch (provided) </li>
+                    <li> 12-1205 Closing Remarks </li>
+                    <li> 1205-130 Lunch (provided) </li>
                 </ul>
                 </div>
             </section>
+            <section id="logistics" class="wrapper style2-alt fade-up">
+               <div class="inner">
+                <h2>Logistics</h2>
+                An annotated map of the key locations on campus referenced below
+                can be found at <a
+                                        href="https://docs.google.com/presentation/d/1tm0DDwkW8K2s6q43_-YoWhfd4c0gUP_T/edit?usp=sharing&ouid=102184995793616898753&rtpof=true&sd=true">
+                    this link</a>.
+                <h3>Getting here</h3>
+                First, get to Princeton Junction:
+                <ul>
+                    <li>
+                    For those taking the train, Amtrak stops at Princeton Junction.
+                    </li>
 
-            <section id="about" class="wrapper style2-alt fade-up">
+                    <li>
+                    For all other modes of transportation, it is hopefully helpful
+                    to know that NJ Transit runs from Penn Station, NY to Princeton
+                    Junction.
+                    </li>
+
+                    <li>
+                    For those flying, Newark Liberty International Airport is
+                    connected to Princeton Junction via NJ Transit (follow signs for
+                    "Airtrain").
+                    </li>
+                </ul>
+
+                <p>
+                For those worried about the ongoing flight delays at Newark and
+                the recent strike at NJ Transit (which ended as of May 19), we
+                cannot provide official guidance. However, the Philadelphia
+                airport is only moderately more inconvenient than Newark
+                (requiring an additional transfer at Trenton) and is an
+                alternative option.
+                </p>
+                <p>
+                Once you get to Princeton Junction, take the "Dinky" to
+                Princeton Station, which is then a 5-10 minute walk from
+                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
+                    Bloomberg Hall</a>,
+                where we will house most attendees.
+                </p>
+                <h3>Staying here</h3>
+
+                <p>
+                For those provided housing support, you will be housed at
+                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
+                    Bloomberg Hall</a> in single-occupancy rooms for two nights, June 15 and 16.
+                Check in will be available at Bloomberg Hall from 2:00 - 6:00
+                p.m. on Sunday June 15th. Follow signs to check-in and look for
+                a tent outside of the building. Attendees who arrive after 6:00
+                p.m. can pick up their room key from the Department of Public
+                Safety at 200 Elm Drive (across the street from Bloomberg Hall).
+                </p>
+
+                <p>
+                For those independently traveling,
+                <a href=https://maps.app.goo.gl/h7qXimAShfm1dPi47>
+                    Nassau Inn</a>
+                and the
+                <a href=https://maps.app.goo.gl/AshWtvg3pwPr7CPN9>
+                    Graduate Hotel</a>
+                are pricier options that are walking distance from the
+                conference venue at
+                <a href=https://maps.app.goo.gl/FwBAMDtrcPsGQEKH7>
+                    Jadwin Hall</a>.
+                Other hotels that are somewhat further are located on Highway 1
+                (~ 40 minute walk, driving encouraged):
+                <a href=https://maps.app.goo.gl/ynLdju1SmAKH7ejd8>Courtyard
+                    Princeton</a>
+                and
+                <a href=https://maps.app.goo.gl/AfiJ8pSkNLh644sAA>
+                Homewood Suites</a>.
+
+                <h3>Parking</h3>
+                <p>
+                You may park for free in the
+                Stadium Drive Garage (please
+                <a
+                        href="https://planyourevent.princeton.edu/summer-guest-information-conferences">register
+                </a>
+                in advance of your arrival).
+                Please see the <a
+                                   href="https://planyourevent.princeton.edu/summer-guest-information-conferences">
+                    Princeton Summer Guest Information Page</a> for more details
+                on parking and for other useful information.
+                </p>
+
+                <p>
+                For other questions, please email the LOC at
+                eresorganizers [at] gmail {dot} com.
+                </p>
+               </div>
+            </section>
+
+            <section id="about" class="wrapper style2 fade-up">
               <div class="inner">
                 <h2>About ERES</h2>
                 <p>
@@ -165,78 +258,6 @@
               </div>
             </section>
 
-            <section id="logistics" class="wrapper style2 fade-up">
-               <div class="inner">
-                <h2>Logistics</h2>
-                Note that a more comprehensive packet containing this
-                information will be available by early June.
-                <h3>Getting here</h3>
-                First, get to Princeton Junction:
-                <ul>
-                    <li>
-                    For those taking the train, Amtrak stops at Princeton Junction.
-                    </li>
-
-                    <li>
-                    For all other modes of transportation, it is hopefully helpful
-                    to know that NJ Transit runs from Penn Station, NY to Princeton
-                    Junction.
-                    </li>
-
-                    <li>
-                    For those flying, Newark Liberty International Airport is
-                    connected to Princeton Junction via NJ Transit (follow signs for
-                    "Airtrain").
-                    </li>
-                </ul>
-
-                For those worried about the ongoing flight delays at Newark and
-                the recent strike at NJ Transit (which ended as of May 19), we
-                cannot provide official guidance. However, the Philadelphia
-                airport is only moderately more inconvenient than Newark
-                (requiring an additional transfer at Trenton) and is an
-                alternative option.
-                <p>
-                Once you get to Princeton Junction, take the "Dinky" to
-                Princeton Station, which is then a 5-10 minute walk from
-                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
-                    Bloomberg Hall</a>,
-                where we will house most attendees.
-                </p>
-                <h3>Staying here</h3>
-                <p>
-                For those provided housing support, you will be housed at
-                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
-                    Bloomberg Hall</a> for up to two nights, June 15 and 16.
-                Guests will be booked in single-occupancy rooms.
-                </p>
-
-                <p>
-                For those independently traveling,
-                <a href=https://maps.app.goo.gl/h7qXimAShfm1dPi47>
-                    Nassau Inn</a>
-                and the
-                <a href=https://maps.app.goo.gl/AshWtvg3pwPr7CPN9>
-                    Graduate Hotel</a>
-                are pricier options that are walking distance from the
-                conference venue at
-                <a href=https://maps.app.goo.gl/FwBAMDtrcPsGQEKH7>
-                    Jadwin Hall</a>.
-                Other hotels that are somewhat further are located on Highway 1
-                (~ 40 minute walk, driving encouraged):
-                <a href=https://maps.app.goo.gl/ynLdju1SmAKH7ejd8>Courtyard
-                    Princeton</a>
-                and
-                <a href=https://maps.app.goo.gl/AfiJ8pSkNLh644sAA>
-                Homewood Suites</a>.
-                </p>
-                <p>Parking will be avaliable, details to come.</p>
-                <p>
-                For other questions, please email the LOC at
-                eresorganizers [at] gmail {dot} com.
-                </p>
-               </div>
-            </section>
 
             <!-- Frequently Asked Questions -->
             <section id="faq" class="wrapper style2-alt fade-up">
