--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
             <section id="faq" class="wrapper style2-alt fade-up">
               <div class="inner">
                 <h2>Frequently Asked Questions</h2>
+                    <h3>What are the formats of the talks and posters for ERES
+                        X?</h3>
+                    <p>Talks will be 8 minutes long with 2 minutes for questions
+                    (10 total). Posterboards will be 4 feet wide by 4 feet
+                    tall.</p>
                     <h3>I don't study exoplanets. Can I participate in ERES?</h3>
                 <p>ERES is open to all early-career scientists, researchers, and
                 students working on anything related to planets and planetary
