--- a/index.html
+++ b/index.html
@@ -126,10 +126,15 @@
                <div class="inner">
                 <h2>Logistics</h2>
                 An annotated map of the key locations on campus referenced below
-                can be found at <a
+                can be found at <u><b><a
                                         href="https://docs.google.com/presentation/d/1tm0DDwkW8K2s6q43_-YoWhfd4c0gUP_T/edit?usp=sharing&ouid=102184995793616898753&rtpof=true&sd=true">
-                    this link</a>.
-                <h3>Getting here</h3>
+                            this link</a></b></u>.
+                <h3>Conference Venue</h3>
+                The conference will be hosted in the basement of McDonnell Hall.
+                The closest entrance is on the side facing Washington Road, down
+                the stairs (see second page of map above).
+                Signage will be available to guide you.
+                <h3>Getting to Princeton</h3>
                 First, get to Princeton Junction:
                 <ul>
                     <li>
