--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 The block schedule is as below:
                 <h3>Monday (6/16)</h3>
                 <ul>
-                    <li> 8-9 Breakfast </li>
+                    <li> 8-9 Breakfast and Check In </li>
                     <li> 9-905 Opening Remarks </li>
                     <li> 905-1020 Talk session 1 </li>
                     <li> 1020-1050 Coffee break </li>
