remove walking distance from Highway 1

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <a href=https://maps.app.goo.gl/FwBAMDtrcPsGQEKH7>
                     Jadwin Hall</a>.
                 Other hotels that are somewhat further are located on Highway 1
-                (~ 40 minute walk, driving encouraged):
+                (driving distance):
                 <a href=https://maps.app.goo.gl/ynLdju1SmAKH7ejd8>Courtyard
                     Princeton</a>
                 and
