--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <li> 130-245 Talk session 3 </li>
                     <li> 245-345 Poster session + coffee </li>
                     <li> 345-500 Talk session 4 </li>
-                    <li> 5 Dinner (possibly provided, TBA) </li>
+                    <li> 530 Depart venue for dinner (Ivy Inn) </li>
                 </ul>
                 <h3>Tuesday (6/17)</h3>
                 <ul>
