add tiger to OC for logo design

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                   <li>Chris O&#8217;Connor (CIERA; past SOC chair)</li>
                   <li>Garrett Levine (Yale; past SOC chair)</li>
                   <li>Aster G. Taylor (University of Michigan; future SOC chair)</li>
+                  <li>Tiger Lu (Yale; past SOC member)</li>
                   <li>Yubo Su (Princeton; LOC chair)</li>
                   <li>Akash Gupta (Princeton)</li>
                   <li>Ankan Sur (Princeton)</li>
