--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <!--
     If you're reading this source code, Yubo says hi! :)
+    Hi Yubo, this is Brooke!
 -->
 <html>
     <head>
-        <title>ERES X Symposium</title>
+        <title>ERES XI Symposium</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -25,21 +26,21 @@
                                 Registration &amp; Important Dates
                             </a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#program" class="scrolly">Program</a>
                         </li>
                         <li>
                           <a href="#logistics" class="scrolly">Logistics</a>
-                        </li>
+                        </li> -->
                         <li>
                           <a href="#faq" class="scrolly">FAQ</a>
                         </li>
-                        <li>
+                        <!-- <li>
                           <a href="#acknowledgements" class="scrolly">Acknowledgements</a>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <a href="#coc" class="scrolly">Conduct</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </nav>
             </div>
@@ -49,232 +50,54 @@
         <!-- Intro -->
             <section id="intro" class="wrapper style2 fullscreen fade-up">
               <div class="inner" style="padding-bottom:100px;">
-                <h1>Emerging Researchers in Exoplanet Science Symposium X</h1>
-                <h2>Princeton University, Princeton, New Jersey</h2>
-                <h2>2025 June 16-17</h2>
+                <h1>Emerging Researchers in Exoplanet Science Symposium XI</h1>
+                <h2>University of Michigan, Ann Arbor, Michigan</h2>
+                <h2>Summer 2026</h2>
                 <br>
-                <h3>We apologize for the long delay and look forward to welcoming you!</h3>
+                <h3>We look forward to welcoming you!</h3>
               </div>
               <div class="inner" style="position:relative;bottom:-40px;padding-bottom:0px;">
-              Background Image: Princeton University, <a
-                  href="https://newstudent.princeton.edu/sites/default/files/styles/home_page_image/public/2022-05/Twilight%20at%20Nassau%20Hall.jpeg?itok=aRCMs_n8">Link</a>
+              Background Image: University of Michigan, <a
+                  href="https://tour.umich.edu/uploads/law-quad-02.jpg">Link</a>
               </div>
             </section>
 
-            <section id="registration" class="wrapper style2-alt fade-up">
+            <section id="registration" class="wrapper style2 fade-up">
                 <div class="inner">
                 <h2>Registration &amp; Important Dates</h2>
                 <!-- Register at this link: -->
                 <!-- <a href=https://forms.gle/WgU8prvheMqi6URo9>https://forms.gle/WgU8prvheMqi6URo9</a> -->
-                Registration is now closed.
+                We anticipate sending out the finalized conference dates in January 2026. Registration will open at a later date. 
                 <br>
 
-                <h3>Important dates:</h3>
-                <ul>
-                  <li>Apr 11 (extended!): Abstract submission deadline*</li>
-                  <li>May 2: Acceptance notifications and confirmations</li>
-                  <li>June 16-17: Conference!</li>
-                </ul>
-                * - While we will prioritize funding for registrants who submit
-                abstracts prior to the deadline, we are happy to welcome
-                abstracts through May 2 and will try to accommodate even later
-                abstract submissions as resources allow. Please email
-                "eresorganizers [at] gmail {dot} com" with questions and
-                requests.<br>
-
-                ** - As of May 19, 2025, we are currently fully booked for talks
-                and for housing! However, we are happy to accept posters from
-                attendees on a case-by-case basis. We expect to have schedules
-                for talks assigned within one week.
                 </div>
             </section>
 
-            <section id="program" class="wrapper style2 fade-up">
-                <div class="inner">
-                <h2>Current Program</h2>
-                <h4>
-                Talk and poster assignments are at <a
-                                                href="https://docs.google.com/spreadsheets/d/1enZiM-_JRdshToyB1YXf3TBiS55jeB7Lr7o2jx22mVg/edit?usp=sharing">
-                    this link</a>. Please let us know if you see any
-            mistakes!</h4>
-                The block schedule is as below:
-                <h3>Monday (6/16)</h3>
-                <ul>
-                    <li> 8-9 Breakfast and Check In </li>
-                    <li> 9-905 Opening Remarks </li>
-                    <li> 905-1020 Talk session 1 </li>
-                    <li> 1020-1050 Coffee break </li>
-                    <li> 1050-1205 Talk session 2 </li>
-                    <li> 1205-130 Mentoring event / lunch (provided) </li>
-                    <li> 130-245 Talk session 3 </li>
-                    <li> 245-345 Poster session + coffee </li>
-                    <li> 345-500 Talk session 4 </li>
-                    <li> 530 Depart venue for dinner (Ivy Inn) </li>
-                </ul>
-                <h3>Tuesday (6/17)</h3>
-                <ul>
-                    <li> 8-9 Breakfast </li>
-                    <li> 9-1015 Talk session 5 </li>
-                    <li> 1015-1045 Coffee break </li>
-                    <li> 1045-12 Talk session 6 </li>
-                    <li> 12-1205 Closing Remarks </li>
-                    <li> 1205-130 Lunch (provided) </li>
-                </ul>
-                </div>
-            </section>
-            <section id="logistics" class="wrapper style2-alt fade-up">
-               <div class="inner">
-                <h2>Logistics</h2>
-                An annotated map of the key locations on campus referenced below
-                can be found at <u><b><a
-                                        href="https://docs.google.com/presentation/d/1tm0DDwkW8K2s6q43_-YoWhfd4c0gUP_T/edit?usp=sharing&ouid=102184995793616898753&rtpof=true&sd=true">
-                            this link</a></b></u>.
-                <h3>Conference Venue</h3>
-                The conference will be hosted in the basement of McDonnell Hall.
-                The closest entrance is on the side facing Washington Road, down
-                the stairs (see second page of map above).
-                Signage will be available to guide you.
-                <h3>Getting to Princeton</h3>
-                First, get to Princeton Junction:
-                <ul>
-                    <li>
-                    For those taking the train, Amtrak stops at Princeton Junction.
-                    </li>
-
-                    <li>
-                    For all other modes of transportation, it is hopefully helpful
-                    to know that NJ Transit runs from Penn Station, NY to Princeton
-                    Junction.
-                    </li>
-
-                    <li>
-                    For those flying, Newark Liberty International Airport is
-                    connected to Princeton Junction via NJ Transit (follow signs for
-                    "Airtrain").
-                    </li>
-                </ul>
-
-                <p>
-                For those worried about the ongoing flight delays at Newark and
-                the recent strike at NJ Transit (which ended as of May 19), we
-                cannot provide official guidance. However, the Philadelphia
-                airport is only moderately more inconvenient than Newark
-                (requiring an additional transfer at Trenton) and is an
-                alternative option.
-                </p>
-                <p>
-                Once you get to Princeton Junction, take the "Dinky" to
-                Princeton Station, which is then a 5-10 minute walk from
-                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
-                    Bloomberg Hall</a>,
-                where we will house most attendees.
-                </p>
-                <h3>Staying here</h3>
-
-                <p>
-                For those provided housing support, you will be housed at
-                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
-                    Bloomberg Hall</a> in single-occupancy rooms for two nights, June 15 and 16.
-                Check in will be available at Bloomberg Hall from 2:00 - 6:00
-                p.m. on Sunday June 15th. Follow signs to check-in and look for
-                a tent outside of the building. Attendees who arrive after 6:00
-                p.m. can pick up their room key from the Department of Public
-                Safety at 200 Elm Drive (across the street from Bloomberg Hall).
-                </p>
-
-                <p>
-                For those independently traveling,
-                <a href=https://maps.app.goo.gl/h7qXimAShfm1dPi47>
-                    Nassau Inn</a>
-                and the
-                <a href=https://maps.app.goo.gl/AshWtvg3pwPr7CPN9>
-                    Graduate Hotel</a>
-                are pricier options that are walking distance from the
-                conference venue at
-                <a href=https://maps.app.goo.gl/FwBAMDtrcPsGQEKH7>
-                    Jadwin Hall</a>.
-                Other hotels that are somewhat further are located on Highway 1
-                (driving distance):
-                <a href=https://maps.app.goo.gl/ynLdju1SmAKH7ejd8>Courtyard
-                    Princeton</a>
-                and
-                <a href=https://maps.app.goo.gl/AfiJ8pSkNLh644sAA>
-                Homewood Suites</a>.
-
-                <h3>Parking</h3>
-                <p>
-                You may park for free in the
-                Stadium Drive Garage (please
-                <a
-                        href="https://planyourevent.princeton.edu/summer-guest-information-conferences">register
-                </a>
-                in advance of your arrival).
-                Please see the <a
-                                   href="https://planyourevent.princeton.edu/summer-guest-information-conferences">
-                    Princeton Summer Guest Information Page</a> for more details
-                on parking and for other useful information.
-                </p>
-
-                <p>
-                For other questions, please email the LOC at
-                eresorganizers [at] gmail {dot} com.
-                </p>
-               </div>
-            </section>
-
-            <section id="about" class="wrapper style2 fade-up">
+            <!-- Frequently Asked Questions -->
+            <section id="faq" class="wrapper style2-alt fade-up">
               <div class="inner">
-                <h2>About ERES</h2>
-                <p>
-                The tenth Emerging Researchers in Exoplanet Science Symposium
-                (ERES X) will take place 2025 June 16-17 at Princeton University
-                in Princeton, New Jersey.
-                </p>
-                <p>
-                ERES is an annual conference by and for early-career scientists
+                <h2>Frequently Asked Questions</h2>
+
+                <h3>What is ERES?</h3>
+                <p>ERES is an annual conference by and for early-career scientists
                 (e.g. graduate students, postdocs, postbacs, advanced
                 undergraduates) working in planetary astronomy, Earth sciences,
                 the search for life in the cosmos, and related fields. Its
                 purpose is to provide an opportunity for these researchers to
                 present their research to an interested audience and network
                 with peers, as well as to stimulate collaborations among
-                exoplanet, Solar System, and Earth science researchers.
-                </p>
-                <p>
-                ERES has been held annually on a rotating basis between partner
+                exoplanet, Solar System, and Earth science researchers.</p>
+                <p>ERES has been held annually on a rotating basis between partner
                 institutions since 2015. The current partner institutions are
                 Cornell, Penn State, Princeton, and Yale.
                 </p>
-                <h3>ERES X Organizers</h3>
-                <ul>
-                  <li>Caleb Lammers (Princeton; SOC chair)</li>
-                  <li>Roberto Tejada Arevalo (Princeton)</li>
-                  <li>Yixian Chen (Princeton)</li>
-                  <li>Eritas Yang (Princeton)</li>
-                  <li>Chris O&#8217;Connor (CIERA; past SOC chair)</li>
-                  <li>Garrett Levine (Yale; past SOC chair)</li>
-                  <li>Aster G. Taylor (University of Michigan; future SOC chair)</li>
-                  <li>Tiger Lu (Yale; past SOC member)</li>
-                  <li>Yubo Su (Princeton; LOC chair)</li>
-                  <li>Akash Gupta (Princeton)</li>
-                  <li>Ankan Sur (Princeton)</li>
-                  <li>Joshua Winn (Princeton)</li>
-                </ul>
 
-              </div>
-            </section>
+                <h3>What are the formats of the talks and posters for ERES?</h3>
+                <p>Talks have been 8 minutes long with 2 minutes for questions
+                (10 total). Posterboards have been 4 feet wide by 4 feet
+                tall.</p>
 
-
-            <!-- Frequently Asked Questions -->
-            <section id="faq" class="wrapper style2-alt fade-up">
-              <div class="inner">
-                <h2>Frequently Asked Questions</h2>
-                    <h3>What are the formats of the talks and posters for ERES
-                        X?</h3>
-                    <p>Talks will be 8 minutes long with 2 minutes for questions
-                    (10 total). Posterboards will be 4 feet wide by 4 feet
-                    tall.</p>
-                    <h3>I don't study exoplanets. Can I participate in ERES?</h3>
+                <h3>I don't study exoplanets. Can I participate in ERES?</h3>
                 <p>ERES is open to all early-career scientists, researchers, and
                 students working on anything related to planets and planetary
                 systems, broadly construed. In addition to exoplanets, relevant
@@ -291,7 +114,7 @@
                 support for participants who do not submit abstracts.</p>
 
                 <h3>Is there a virtual/remote attendance option?</h3>
-                <p>No. ERES X will be a fully in-person event. </p>
+                <p>TBD. Previously, ERES X was a fully in-person event.. </p>
 
                 <h3>How many slots are there for oral presentations? What about poster presentations?</h3>
                 <p>The SOC will decide the number of talks on the schedule after
@@ -302,22 +125,11 @@
 
                 <h3>What will be the costs of attending?</h3>
                 <p>Due to the unprecedented current fiscal situation in the US,
-                ERES X is working with a limited budget compared to previous
-                years. Nevertheless, we have made every effort to ensure that
+                ERES XI is working with a limited budget compared to previous
+                years. Nevertheless, we will make every effort to ensure that
                 participants are supported as much as possible.
                 </p>
-                <p>
-                Our tentative financial plan is as follows:
-                Registration and abstract submission is free of charge for all
-                participants.
-                Breakfast and lunch will be catered by Princeton Campus Dining
-                at no cost to attendees.
-                We currently expect to ask attendees to organize their own
-                dinners (options on campus start around $10-$20).
-                Housing financial support will be limited and prioritized for
-                researchers otherwise unable to attend.
-                Travel support is currently outside the scope of our budget.
-                </p>
+            
 
                 <h3>How do you pronouce ERES?</h3>
                 <p>We are going with the pronunciation "EE-rez" (IPA spelling:
@@ -325,13 +137,29 @@
                 remember it being pronounced "AIR-eez" (/&#603;&#601;ri:z/, like
                 the name "Ares").</p>
 
+                <!-- <h3>Who is orgianizing ERES XI?</h3>
+                <ul>
+                  <li>Caleb Lammers (Princeton; SOC chair)</li>
+                  <li>Roberto Tejada Arevalo (Princeton)</li>
+                  <li>Yixian Chen (Princeton)</li>
+                  <li>Eritas Yang (Princeton)</li>
+                  <li>Chris O&#8217;Connor (CIERA; past SOC chair)</li>
+                  <li>Garrett Levine (Yale; past SOC chair)</li>
+                  <li>Aster G. Taylor (University of Michigan; future SOC chair)</li>
+                  <li>Tiger Lu (Yale; past SOC member)</li>
+                  <li>Yubo Su (Princeton; LOC chair)</li>
+                  <li>Akash Gupta (Princeton)</li>
+                  <li>Ankan Sur (Princeton)</li>
+                  <li>Joshua Winn (Princeton)</li>
+                </ul> -->
+
 
                 <h2>Other Questions?</h2>
                   <p>Send an email to eresorganizers [at] gmail {dot} com</p>
               </div>
             </section>
 
-            <!-- Frequently Asked Questions -->
+            <!-- Frequently Asked Questions
             <section id="acknowledgements" class="wrapper style2 fade-up">
               <div class="inner">
                 <h2>Acknowledgements</h2>
@@ -340,20 +168,22 @@
                 Department of Astrophysical Sciences, the Princeton Department
                 of Geophysical Sciences, and the Institute for Advanced Study.
               </div>
-            </section>
+            </section> -->
 
-            <!-- code of conduct -->
+            <!-- code of conduct
             <section id="coc" class="wrapper style2-alt fade-up">
                 <div class="inner">
                     <h2>Code of Conduct</h2>
                     ERES 2025 is dedicated to fostering a professional environment that values respect, equal opportunity, and fair treatment for all participants. Please see our Code of Conduct page <a href="eres-coc.html"><b>here</b></a>.
                 </div>
-            </section>
+            </section> -->
 
             <section id="previous" class="wrapper style2 fade-up">
                 <div class="inner">
                     <h2>Previous ERES pages</h2>
+                    <a href="index2025.html">Princeton 2025</a><br>
                     <a href="index2024.html">Cornell 2024</a>
+
                 </div>
             </section>
 
@@ -368,7 +198,7 @@
             <footer id="footer" class="wrapper style2-alt">
                 <div class="inner">
                     <ul class="menu">
-                        <li>Yubo Su, 2025 June 15. Last updated 2025 June 15.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        <li>Last updated 2026 September 24.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                     </ul>
                 </div>
             </footer>
