--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 support for participants who do not submit abstracts.</p>
 
                 <h3>Is there a virtual/remote attendance option?</h3>
-                <p>TBD. Previously, ERES X was a fully in-person event.. </p>
+                <p>TBD. Previously, ERES X was a fully in-person event. </p>
 
                 <h3>How many slots are there for oral presentations? What about poster presentations?</h3>
                 <p>The SOC will decide the number of talks on the schedule after
@@ -198,7 +198,7 @@
             <footer id="footer" class="wrapper style2-alt">
                 <div class="inner">
                     <ul class="menu">
-                        <li>Last updated 2026 September 24.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        <li>Last updated 2025 September 24.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                     </ul>
                 </div>
             </footer>
