--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <div class="inner" style="padding-bottom:100px;">
                 <h1>Emerging Researchers in Exoplanet Science Symposium XI</h1>
                 <h2>University of Michigan, Ann Arbor, Michigan</h2>
-                <h2>Summer 2026</h2>
+                <h2>Late July 2026</h2>
                 <br>
                 <h3>We look forward to welcoming you!</h3>
               </div>
@@ -67,7 +67,9 @@
                 <h2>Registration &amp; Important Dates</h2>
                 <!-- Register at this link: -->
                 <!-- <a href=https://forms.gle/WgU8prvheMqi6URo9>https://forms.gle/WgU8prvheMqi6URo9</a> -->
-                We anticipate sending out the finalized conference dates in January 2026. Registration will open at a later date. 
+                We are planning for a late July conference and 
+                anticipate sending out the finalized conference dates in January 2026.
+                Registration will open at a later date. 
                 <br>
 
                 </div>
@@ -198,7 +200,7 @@
             <footer id="footer" class="wrapper style2-alt">
                 <div class="inner">
                     <ul class="menu">
-                        <li>Last updated 2025 September 24.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        <li>Last updated 2025 October 30.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                     </ul>
                 </div>
             </footer>
