update funding sources

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- Register at this link: -->
                 <!-- <a href=https://forms.gle/WgU8prvheMqi6URo9>https://forms.gle/WgU8prvheMqi6URo9</a> -->
                 We are pleased to announce that the Emerging Researchers in Exoplanet Science XI (ERES XI) conference will be held at the University of Michigan in Ann Arbor on July 27–28, 2026. 
-                Much thanks to the Center for Habitable Planetary Systems for funding this conference.
+                Much thanks to the Center for Habitable Planetary Systems and the University of Michigan Department of Astronomy for funding this conference.
                 <p>
                 <p>The ERES annual meeting provides a platform for early-career scientists—graduate students, postdocs, and advanced undergraduates—to share their research on all aspects of exoplanet science, from detection and characterization to theory and instrumentation. The meeting also fosters networking, collaboration, and professional development within the exoplanet community.
                 
@@ -145,8 +145,9 @@
                 years. Nevertheless, we will make every effort to ensure that
                 participants are supported as much as possible.
 
-                <p>With the generous contributions from the Center for Habitable Planetary Systems, 
-                we are able to guarantee free registration for all participants. 
+                <p>With the generous contributions from the Center for Habitable Planetary Systems and the 
+                    University of Michigan Department of Astronomy, 
+                    we are able to guarantee <b>free registration for all participants. </b>
                 </p>
             
 
@@ -190,7 +191,7 @@
               <div class="inner">
                 <h2>Acknowledgements</h2>
                 <h3>Sponsors</h3>
-                ERES XI is funded by generous contributions from the Center for Habitable Planetary Systems.
+                ERES XI is funded by generous contributions from the Center for Habitable Planetary Systems and the University of Michigan Department of Astronomy.
               </div>
             </section>
 
